# claude-desktop-buddy

./: .gitignore  CLAUDE.md  PORTING_MYDAZY.md
mydazy-p30-4g/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
mydazy-p30-4g/main/: CMakeLists.txt  Kconfig.projbuild  ble_nus.cc  ble_nus.h  board_config.h  data.cc  data.h  display.cc  display.h  idf_component.yml  input.cc  input.h  main.cc  power.cc  power.h  touch.cc  touch.h
